changes compound CSS nested selectors to manually declared to avoid creation of :is() selectors that break in older versions of Safari

--- a/packages/themes/src/css/genesis/inputs/file.css
+++ b/packages/themes/src/css/genesis/inputs/file.css
@@ -13,10 +13,11 @@
     font-size: var(--fk-font-size-input);
     line-height: var(--fk-line-height-input);
     position: relative;
+  }
 
-    & + .formkit-file-item {
-      margin-top: var(--fk-padding-input-t);
-    }
+  & .formkit-no-files + .formkit-file-item,
+  & .formkit-file-item + .formkit-file-item {
+    margin-top: var(--fk-padding-input-t);
   }
 
   &[data-multiple] .formkit-file-remove {
